...
                                                    <rect key="frame" x="19.999999999999993" y="7" width="101.33333333333331" height="30"/>
                                                    <subviews>
                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="settings" translatesAutoresizingMaskIntoConstraints="NO" id="jRE-lF-S58">
                                                            <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
                                                            <constraints>
...
                                                            </constraints>
                                                        </imageView>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CbP-qN-c3q">
                                                            <rect key="frame" x="38" y="0.0" width="63.333333333333343" height="30"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                        <viewLayoutGuide key="safeArea" id="1Bp-B6-NSN"/>
                    </view>
                    <navigationItem key="navigationItem" title="Home" id="cii-Eg-aYs">
                        <barButtonItem key="leftBarButtonItem" title="Menu" image="menu" id="dk2-yf-p9c">
                            <connections>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Add" image="plus" id="0eV-a4-MqC" userLabel="Add Tree">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="add tree"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="250" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T2U-ko-uFs" userLabel="identify tree">
                                        <rect key="frame" x="0.0" y="64.666666666666657" width="374" height="374"/>
                                        <color key="backgroundColor" red="0.45217963862880095" green="0.70991438627243042" blue="0.35023947781911907" alpha="0.14999999999999999" colorSpace="custom" customColorSpace="displayP3"/>
...
                        <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                    </view>
                    <navigationItem key="navigationItem" title="Identify" id="VgC-2a-nIk">
                        <barButtonItem key="leftBarButtonItem" title="Menu" image="menu" id="l8n-PX-Faj">
                            <connections>
...
                        <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Coordinates" id="DS0-I7-gGL">
                        <barButtonItem key="leftBarButtonItem" title="Menu" image="menu" id="jgV-Em-O0F">
                            <connections>
...
                        <viewLayoutGuide key="safeArea" id="3H3-jO-XTg"/>
                    </view>
                    <navigationItem key="navigationItem" title="Map" id="8hd-Zn-4Yc">
                        <barButtonItem key="leftBarButtonItem" title="Menu" image="menu" id="19C-HU-eGP">
                            <connections>
...
                        <viewLayoutGuide key="safeArea" id="xwd-N2-aq5"/>
                    </view>
                    <navigationItem key="navigationItem" title="QR Code" id="vy0-tZ-wQc">
                        <barButtonItem key="leftBarButtonItem" title="Menu" image="menu" id="v6v-1M-z7p">
                            <connections>
...
                    </tableView>
                    <navigationItem key="navigationItem" title="Nearby Trees" id="h2o-Ei-UdW">
                        <barButtonItem key="leftBarButtonItem" title="Close" image="xButton" id="qzF-J6-tLK">
                            <connections>
                                <action selector="closeButtonPressed:" destination="vCu-8Q-YGy" id="5G7-So-ugN"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Max identification distance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rDS-Fm-OlN">
                                                    <rect key="frame" x="20" y="11.666666666666664" width="205" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Active data sources" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bhJ-zN-YY8">
                                                    <rect key="frame" x="20" y="11.666666666666664" width="150.66666666666666" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="Add Message" id="Eyg-BC-FOQ">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="LFH-C5-inr">
                            <connections>
                                <action selector="cancelButtonPressed:" destination="jXn-HI-cYp" id="YoN-bo-heo"/>
...
                        <viewLayoutGuide key="safeArea" id="ylU-IT-ZSh"/>
                    </view>
                    <navigationItem key="navigationItem" title="More Information" id="Qrx-E5-vc1">
                        <barButtonItem key="leftBarButtonItem" title="Close" image="xButton" id="YiN-PJ-89R">
                            <connections>
...
