...
    static let cutoffDistanceKey = "cutoffDistanceKey"
    static let dataSourceAvailibilityKey = "dataSourcesAvailibilityKey"
    static let showUserLocationKey = "showUserLocationKey"

    // constants that store the default preferences
    static let cutoffDistanceDefault = 100.0
    static let dataSourceAvailibilityDefault = ["City of Holland Tree Inventory": true, "Hope College i-Tree Data": true, "Hope College Trees": true, "Tree Benefit Data": true]
    static let showUserLocationDefault = true

    // variables that store the current user preferences
    static var cutoffDistance: Double = cutoffDistanceDefault
    static var dataSourceAvailibility: [String: Bool] = dataSourceAvailibilityDefault
    static var showUserLocation: Bool = showUserLocationDefault
...
