...
    var dataSources = [DataSource]()

    // MARK: Overrides

    override func viewDidLoad() {
        super.viewDidLoad()
        title = "Active Data Sources"
        dataSources = DataManager.dataSources
        // Set the checkmarks based on the active status of the data sources
        DispatchQueue.main.async {
            for i in 0 ..< self.dataSources.count {
                let indexPath = NSIndexPath(row: i, section: 0)
                if PreferencesManager.isActive(dataSourceName: self.dataSources[i].dataSourceName) {
...
