...

    override func viewDidLoad() {
        super.viewDidLoad()
        dataSource = self
        delegate = self

        title = "Tree Details"
        configurePageControl()

        // Set the background color to white so it is not noticed when flipping quickly between the different tree displays
        view.backgroundColor = UIColor.white

        // Set the displayed tree for each of the tree detail views.
...
